@@ -123,7 +123,9 @@ struct option
    errors, only prototype getopt for the GNU C library.  */
 extern KPSEDLL int getopt (int argc, char *const *argv, const char *shortopts);
 #else /* not __GNU_LIBRARY__ */
+#ifndef __cplusplus
 extern KPSEDLL int getopt ();
+#endif /* not __cplusplus */
 #endif /* __GNU_LIBRARY__ */
 extern KPSEDLL int getopt_long (int argc, char *const *argv, const char *shortopts,
 		        const struct option *longopts, int *longind);
